k8s/base/kubernetes-dashboard/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homeonly
  namespace: kubernetes-dashboard
spec:
  ipAllowList:
    sourceRange:
      - 185.14.151.136/32
      - 87.205.23.9/32
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.k8s.vicio.ovh`)
      kind: Rule
      middlewares:
        - name: homeonly
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
          scheme: https
          serversTransport: kong-insecure
  tls: {} # default TLSStore -> wildcard-k8s-vicio-ovh-tls
